--- a/app/views/settings/edit.html.erb
+++ b/app/views/settings/edit.html.erb
@@ -1,11 +1,44 @@
-<%= current_user.setting.jwt_token_1 %> 
 
-<%= form_with model: @setting do |form| %>
-    <%= form.text_field :jwt_token_1, placeholder: "jwt_token_1" %>
-    <%= form.text_field :jwt_token_2, placeholder: "jwt_token_2" %>
-    <%= form.text_field :jwt_token_3, placeholder: "jwt_token_3" %>
-    <%= form.text_field :space_name_1, placeholder: "space_name_1" %>
-    <%= form.text_field :space_name_2, placeholder: "space_name_2" %>
-    <%= form.text_field :space_name_3, placeholder: "space_name_3" %>
-    <%= form.submit "SUBMIT" %>
-  <% end %>
+<div class="container">
+    <%= form_with model: @setting, class: "p-4" do |form| %>
+        <div class="form-group mb-4">
+            <%= form.label :jwt_token_1 %>
+            <%= form.text_field :jwt_token_1, placeholder: "jwt_token_1", class: "form-control mb-2" %>
+            <%= @setting.jwt_token_1 %>
+        </div>
+
+        <div class="form-group mb-4">
+            <%= form.label :jwt_token_2 %>
+            <%= form.text_field :jwt_token_2, placeholder: "jwt_token_2", class: "form-control mb-2"  %>
+            <%= @setting.jwt_token_2 %>
+
+        </div>
+
+        <div class="form-group mb-4">
+            <%= form.label :jwt_token_3 %>
+            <%= form.text_field :jwt_token_3, placeholder: "jwt_token_3", class: "form-control mb-2"  %>
+            <%= @setting.jwt_token_3 %>
+        </div>
+        
+        
+        <div class="form-group mb-4">
+            <%= form.label :space_name_1 %>
+            <%= form.text_field :space_name_1, placeholder: "space_name_1", class: "form-control mb-2"  %>
+            <%= @setting.space_name_1 %>
+        </div>
+
+        <div class="form-group mb-4">
+            <%= form.label :space_name_2 %>
+            <%= form.text_field :space_name_2, placeholder: "space_name_2", class: "form-control mb-2"  %>
+            <%= @setting.space_name_2 %>
+        </div>
+
+        <div class="form-group mb-4">
+            <%= form.label :space_name_3 %>
+            <%= form.text_field :space_name_3, placeholder: "space_name_3", class: "form-control mb-2"  %>
+            <%= @setting.space_name_3 %>
+        </div>
+
+        <%= form.submit "SUBMIT", class: "btn btn-primary" %>
+    <% end %>
+</div>
