--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,9 +1,9 @@
 <div class="container-fluid">
     <div class="row">
         <div id="jumbotron" class="col-sm-12 mb-3 p-5">
-            <h1 class="mb-2">Documentation
+            <h1 class="mb-2"><%= current_user.setting.jumbo_title_text %>
             </h1>
-            <h2>API references, developer guides, and quick starts for the engineering team
+            <h2><%= current_user.setting.jumbo_description_text %>
             </h2>
         </div>
     </div>
