create nav to edit form

--- a/app/views/settings/edit.html.erb
+++ b/app/views/settings/edit.html.erb
@@ -1,147 +1,32 @@
-
 <div class="container">
-    <%= form_with model: @setting, class: "p-4" do |form| %>
 
-        <h1>Edit</h1>
 
-        <h2>Visitor Authentication Settings</h2>
+<ul class="nav nav-tabs" id="myTab" role="tablist">
+    <li class="nav-item" role="presentation">
+      <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Visitor Authentication Settings</button>
+    </li>
+    <li class="nav-item" role="presentation">
+      <button class="nav-link" id="card-content-tab" data-bs-toggle="tab" data-bs-target="#card-content" type="button" role="tab" aria-controls="profile" aria-selected="false">Card Contents</button>
+    </li>
+    <li class="nav-item" role="presentation">
+      <button class="nav-link" id="theme-tab" data-bs-toggle="tab" data-bs-target="#theme-content" type="button" role="tab" aria-controls="contact" aria-selected="false">Theme</button>
+    </li>
+    <li class="nav-item" role="presentation">
+        <button class="nav-link" id="jumbo-tab" data-bs-toggle="tab" data-bs-target="#jumbo-content" type="button" role="tab" aria-controls="jumbo" aria-selected="false">Jumbo Content</button>
+      </li>
+  </ul>
 
-        <div class="form-group mb-4">
-            <%= form.label :url %>
-            <%= form.text_field :url, placeholder: "url", class: "form-control mb-2"  %>
-            <%= @setting.url %>
-        </div>
 
-        <div class="form-group mb-4">
-            <%= form.label :jwt_token_1 %>
-            <%= form.text_field :jwt_token_1, placeholder: "jwt_token_1", class: "form-control mb-2" %>
-            <%= @setting.jwt_token_1 %>
-        </div>
+  <div class="tab-content" id="myTabContent">
+    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab"><%= render "form_va_content" %></div>
+    <div class="tab-pane fade" id="card-content" role="tabpanel" aria-labelledby="profile-tab"><%= render "form_card_content" %></div>
+    <div class="tab-pane fade" id="theme-content" role="tabpanel" aria-labelledby="contact-tab"><%= render "form_theme_content" %></div>
+    <div class="tab-pane fade" id="jumbo-content" role="tabpanel" aria-labelledby="jumbo"><%= render "form_jumbo_content" %></div>
+  </div>
 
-        <div class="form-group mb-4">
-            <%= form.label :jwt_token_2 %>
-            <%= form.text_field :jwt_token_2, placeholder: "jwt_token_2", class: "form-control mb-2"  %>
-            <%= @setting.jwt_token_2 %>
 
-        </div>
 
-        <div class="form-group mb-4">
-            <%= form.label :jwt_token_3 %>
-            <%= form.text_field :jwt_token_3, placeholder: "jwt_token_3", class: "form-control mb-2"  %>
-            <%= @setting.jwt_token_3 %>
-        </div>
-        
-        
-        <div class="form-group mb-4">
-            <%= form.label :space_name_1 %>
-            <%= form.text_field :space_name_1, placeholder: "space_name_1", class: "form-control mb-2"  %>
-            <%= @setting.space_name_1 %>
-        </div>
 
-        <div class="form-group mb-4">
-            <%= form.label :space_name_2 %>
-            <%= form.text_field :space_name_2, placeholder: "space_name_2", class: "form-control mb-2"  %>
-            <%= @setting.space_name_2 %>
-        </div>
 
-        <div class="form-group mb-4">
-            <%= form.label :space_name_3 %>
-            <%= form.text_field :space_name_3, placeholder: "space_name_3", class: "form-control mb-2"  %>
-            <%= @setting.space_name_3 %>
-        </div>
-
-        <h2>Card Content</h2>
-
-        <div class="form-group mb-4">
-            <%= form.label :space_title_1 %>
-            <%= form.text_field :space_title_1, placeholder: "space_title_1", class: "form-control mb-2"  %>
-            <%= @setting.space_title_1 %>
-        </div>
-
-        <div class="form-group mb-4">
-            <%= form.label :space_title_2 %>
-            <%= form.text_field :space_title_2, placeholder: "space_title_2", class: "form-control mb-2"  %>
-            <%= @setting.space_title_2 %>
-        </div>
-
-        <div class="form-group mb-4">
-            <%= form.label :space_title_3 %>
-            <%= form.text_field :space_title_3, placeholder: "space_title_3", class: "form-control mb-2"  %>
-            <%= @setting.space_title_3 %>
-        </div>
-
-        <div class="form-group mb-4">
-            <%= form.label :space_description_1 %>
-            <%= form.text_area :space_description_1, placeholder: "space_description_1", class: "form-control mb-2"  %>
-            <%= @setting.space_description_1 %>
-        </div>
-
-        <div class="form-group mb-4">
-            <%= form.label :space_description_2 %>
-            <%= form.text_area :space_description_2, placeholder: "space_description_2", class: "form-control mb-2"  %>
-            <%= @setting.space_description_2 %>
-        </div>
-
-        <div class="form-group mb-4">
-            <%= form.label :space_description_3 %>
-            <%= form.text_area :space_description_3, placeholder: "space_description_3", class: "form-control mb-2"  %>
-            <%= @setting.space_description_3 %>
-        </div>
-
-        <div class="form-group mb-4">
-            <%= form.label :button_text %>
-            <%= form.text_field :button_text, placeholder: "button_text", class: "form-control mb-2"  %>
-            <%= @setting.button_text %>
-        </div>
-
-        <h2>Theme</h2>
-
-        <div class="form-group mb-4">
-            <%= form.label :bg_color %>
-            <%= form.color_field :bg_color, value: @setting.bg_color, class: "form-control mb-2"  %>
-            <%= @setting.bg_color %>
-        </div>
-
-        <div class="form-group mb-4">
-            <%= form.label :jumbo_bg_color %>
-            <%= form.color_field :jumbo_bg_color, value: @setting.jumbo_bg_color, class: "form-control mb-2"  %>
-            <%= @setting.jumbo_bg_color %>
-        </div>
-
-        <div class="form-group mb-4">
-            <%= form.label :button_bg_color %>
-            <%= form.color_field :button_bg_color, value: @setting.button_bg_color, class: "form-control mb-2"  %>
-            <%= @setting.button_bg_color %>
-        </div>
-
-        <div class="form-group mb-4">
-            <%= form.label :button_text_color %>
-            <%= form.color_field :button_text_color, value: @setting.button_text_color, class: "form-control mb-2"  %>
-            <%= @setting.button_text_color %>
-        </div>
-
-        <div class="form-group mb-4">
-            <%= form.label :link_color %>
-            <%= form.color_field :link_color, value: @setting.link_color, class: "form-control mb-2"  %>
-            <%= @setting.link_color %>
-        </div>
-
-        <h2>Jumbotron Content</h2>
-
-        <div class="form-group mb-4">
-            <%= form.label :jumbo_title_text %>
-            <%= form.text_field :jumbo_title_text, placeholder: "jumbo_title_text", class: "form-control mb-2"  %>
-            <%= @setting.jumbo_title_text %>
-        </div>
-
-        <div class="form-group mb-4">
-            <%= form.label :jumbo_description_text %>
-            <%= form.text_field :jumbo_description_text, placeholder: "jumbo_description_text", class: "form-control mb-2"  %>
-            <%= @setting.jumbo_description_text %>
-        </div>
-        
-        
-
-        <%= form.submit "SUBMIT", class: "btn btn-primary" %>
-    <% end %>
+  
 </div>
