update edit form

--- a/app/views/settings/_form_card_content.html.erb
+++ b/app/views/settings/_form_card_content.html.erb
@@ -1,47 +1,39 @@
 <%= form_with model: @setting, class: "p-4" do |form| %>
-    <h2>Card Content</h2>
 
     <div class="form-group mb-4">
         <%= form.label :space_title_1 %>
         <%= form.text_field :space_title_1, placeholder: "space_title_1", class: "form-control mb-2"  %>
-        <%= @setting.space_title_1 %>
     </div>
 
     <div class="form-group mb-4">
         <%= form.label :space_title_2 %>
         <%= form.text_field :space_title_2, placeholder: "space_title_2", class: "form-control mb-2"  %>
-        <%= @setting.space_title_2 %>
     </div>
 
     <div class="form-group mb-4">
         <%= form.label :space_title_3 %>
         <%= form.text_field :space_title_3, placeholder: "space_title_3", class: "form-control mb-2"  %>
-        <%= @setting.space_title_3 %>
     </div>
 
     <div class="form-group mb-4">
         <%= form.label :space_description_1 %>
         <%= form.text_area :space_description_1, placeholder: "space_description_1", class: "form-control mb-2"  %>
-        <%= @setting.space_description_1 %>
     </div>
 
     <div class="form-group mb-4">
         <%= form.label :space_description_2 %>
         <%= form.text_area :space_description_2, placeholder: "space_description_2", class: "form-control mb-2"  %>
-        <%= @setting.space_description_2 %>
     </div>
 
     <div class="form-group mb-4">
         <%= form.label :space_description_3 %>
         <%= form.text_area :space_description_3, placeholder: "space_description_3", class: "form-control mb-2"  %>
-        <%= @setting.space_description_3 %>
     </div>
 
     <div class="form-group mb-4">
         <%= form.label :button_text %>
         <%= form.text_field :button_text, placeholder: "button_text", class: "form-control mb-2"  %>
-        <%= @setting.button_text %>
     </div>
 
-    <%= form.submit "SUBMIT", class: "btn btn-primary" %>
+    <%= form.submit "Update", class: "btn btn-primary" %>
 <% end %>
