--- a/app/views/settings/_form_theme_content.html.erb
+++ b/app/views/settings/_form_theme_content.html.erb
@@ -1,6 +1,4 @@
 <%= form_with model: @setting, class: "p-4" do |form| %>
-    <h2>Theme</h2>
-
     <div class="form-group mb-4">
         <%= form.label :bg_color %>
         <%= form.color_field :bg_color, value: @setting.bg_color, class: "form-control mb-2"  %>
@@ -31,5 +29,5 @@
         <%= @setting.link_color %>
     </div>
 
-    <%= form.submit "SUBMIT", class: "btn btn-primary" %>
+    <%= form.submit "Update", class: "btn btn-primary" %>
 <% end %>
