--- a/app/views/settings/_form_theme_content.html.erb
+++ b/app/views/settings/_form_theme_content.html.erb
@@ -1,5 +1,11 @@
 <%= form_with model: @setting, class: "p-4" do |form| %>
     <div class="form-group mb-4">
+        <%= form.label :image %>
+        <%= form.file_field :image %>
+        <%= image_tag @setting.image %>
+    </div>
+
+    <div class="form-group mb-4">
         <%= form.label :bg_color %>
         <%= form.color_field :bg_color, value: @setting.bg_color, class: "form-control mb-2"  %>
         <%= @setting.bg_color %>
