--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-default" role="navigation">
   <div class="navbar-header">
-    <a class="navbar-brand" href="/"><% if @setting.image %><%= image_tag @setting.image, style: "width: 150px;" %><% end %>
+    <a class="navbar-brand" href="/"><% if @setting.image.present? %><%= image_tag @setting.image, style: "width: 150px;" %><% end %>
     </a>
     <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
   </div>
