--- a/app/views/settings/_form_theme_content.html.erb
+++ b/app/views/settings/_form_theme_content.html.erb
@@ -2,7 +2,9 @@
     <div class="form-group mb-4">
         <%= form.label :image %>
         <%= form.file_field :image %>
-        <%= image_tag @setting.image %>
+        <% if @setting.image.present? %>
+            <%= image_tag @setting.image %>
+        <% end %>
     </div>
 
     <div class="form-group mb-4">
