--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="d-flex justify-content-center align-items-center container">
   <div class="form mt-5">
-    <%= image_tag "logo.svg", class: "mb-5" %>
+    <%= image_tag "gitbook-logo.png", class: "mb-5" %>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
